[tool.poetry]
name = "pycubacel"
version = "0.2.1"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">3.6.1,<4.0"
Flask = "^1.1.2"
typer = "^0.3.2"
requests = "^2.24.0"
parsel = "^1.6.0"
gevent = {version = "^20.9.0", optional = true}

[tool.poetry.extras]
gserver = ["gevent"]

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pyinstaller = "^4.0"

[tool.poetry.scripts]
pycubacel = "pycubacel.__main__:fconsult"
pycubacelserver = "pycubacel.__main__:fserver"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
